--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.1.0",
+    "framer-motion": "^11.0.6",
     "next": "14.0.4",
+    "next-cloudinary": "^6.4.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.1.0",
+    "react-use-measure": "^2.1.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "sass": "^1.71.1",
     "tailwindcss": "^3.3.0"
   }
 }
